--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="es">
 
 <head>
-    <title>SIET-4D</title>
+    <title>SIET-4D Objetivos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="assets/img/apple-icon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/templatemo.css">
@@ -68,7 +69,7 @@
                             <a class="nav-link" href="index.html">Objetivos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">Acciones</a>
+                            <a class="nav-link" href="acciones.html">Acciones</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="shop.html">F.T. Base</a>
@@ -115,7 +116,7 @@
     <!-- Close Header -->
 
     <!-- Modal -->
-    <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="w-100 pt-1 mb-5 text-right">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -129,7 +130,7 @@
                 </div>
             </form>
         </div>
-    </div>
+    </div> -->
 
 
 
@@ -151,9 +152,10 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
-                                <h1 class="h1 text-success"><b>Objetivo N°1</b> </h1>
-                                <h3 class="h2">Desarrollar un sistema de proyección de escenarios que permita regular distancias de las lecciones de tiro, para crear entornos en cuarta dimensión apoyados por los sistemas háptico y de sonido inmersivo.  </h3>
-                                <p>
+                                <h1 class="h1 text-success"><b>Objetivo Especifico </b> N°1</h1>
+                                <h3 class="h2">Analizar la situación actual en la EMI-UALP, en relación con la formación de los estudiantes en la parte práctica de la asignatura de tiro, basados en los reglamentos de formación militar para determinar los requerimientos del sistema.
+                                </h3>
+                                <!-- <p>
                                     Acciones: Investigar tecnologías de proyección en 3D y sistemas de regulación de distancia, Analizar necesidades específicas de proyección para lecciones de tiro, Identificar requisitos de hardware y software para el sistema de proyección.
 
                                     Zay Shop is an eCommerce HTML5 CSS template with latest version of Bootstrap 5 (beta 1). 
@@ -162,7 +164,7 @@
                                     <a rel="sponsored" class="text-success" href="https://unsplash.com/" target="_blank">Unsplash</a> and
                                     <a rel="sponsored" class="text-success" href="https://icons8.com/" target="_blank">Icons 8</a>.
 
-                                </p>
+                                </p> -->
                             </div>
                         </div>
                     </div>
