--- a/index.html
+++ b/index.html
@@ -148,13 +148,12 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_01.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/ANALISIS.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
-                                <h1 class="h1 text-success"><b>Objetivo Especifico </b> N°1</h1>
-                                <h3 class="h2">Analizar la situación actual en la EMI-UALP, en relación con la formación de los estudiantes en la parte práctica de la asignatura de tiro, basados en los reglamentos de formación militar para determinar los requerimientos del sistema.
-                                </h3>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b> N°1</h1>
+                                <h3 class="h2">Analizar la situación actual en la EMI-UALP, en relación con la formación de los estudiantes en la parte práctica de la asignatura de tiro, basados en los reglamentos de formación militar para determinar los requerimientos del sistema.</h3>
                                 <!-- <p>
                                     Acciones: Investigar tecnologías de proyección en 3D y sistemas de regulación de distancia, Analizar necesidades específicas de proyección para lecciones de tiro, Identificar requisitos de hardware y software para el sistema de proyección.
 
@@ -174,16 +173,14 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/PROYECCION.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°2</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b> N°2</h1>
+                                <h3 class="h2">Desarrollar un sistema de proyección de escenarios que permita regular distancias 
+                                    de las lecciones de tiro, para crear entornos en cuarta dimensión apoyados por los 
+                                    sistemas háptico y de sonido inmersivo. </h3>
                             </div>
                         </div>
                     </div>
@@ -197,12 +194,10 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°3</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                                <h1 class="h1 text-success"><b>Objetivo Especifico </b> N°3</h1>
+                                <h3 class="h2">Desarrollar un sistema de puntería basado en láser con visión artificial para 
+                                    identificar el lugar de impacto en el blanco del polígono de tiro y registrar los datos 
+                                    obtenidos en la práctica para su evaluación. </h3>
                             </div>
                         </div>
                     </div>
@@ -216,12 +211,10 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°4</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                                <h1 class="h1 text-success"><b>Objetivo Especifico </b> N°4</h1>
+                                <h3 class="h2">Desarrollar un sistema de reconocimiento de posiciones del cuerpo humano, al 
+                                    momento de realizar la práctica de tiro por los estudiantes y registrar datos de las 
+                                    posturas en la evaluación. </h3>
                             </div>
                         </div>
                     </div>
@@ -235,12 +228,10 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°5</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                                <h1 class="h1 text-success"><b>Objetivo Especifico </b> N°5</h1>
+                                <h3 class="h2">Integrar en una plataforma de evaluación y registro los subsistemas de puntería, 
+                                    reconocimiento de posiciones del tirador, para el seguimiento del progreso de los 
+                                    estudiantes de la EMI-UALP. </h3>
                             </div>
                         </div>
                     </div>
@@ -465,7 +456,7 @@
                     <div class="col-12">
                         <p class="text-left text-light">
                             Copyright &copy; 2024 SIET-4D 
-                            | Diseñado por <a rel="sponsored" href="#" target="_blank">Cidar & Ruddy</a>
+                            | Diseñado por <a rel="sponsored" href="https://academic-record-git-main-cidars-projects.vercel.app/" target="_blank">Cidar & Ruddy</a>
                         </p>
                     </div>
                 </div>
