--- a/acciones.html
+++ b/acciones.html
@@ -104,11 +104,11 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_01.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/RECOPILAR ANALIZAR.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
-                              <h1 class="h1 text-success"><b>Objetivo Especifico </b>N°1</h1>
+                              <h1 class="h1 text-success"><b>Objetivo Específico </b>N°1</h1>
                               <ul style="list-style: none; padding-left: 0;">
                                 <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                   <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
@@ -134,16 +134,25 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/ACCION OBJ 2.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°2</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                            <div class="text-align-left align-self-center">
+                              <h1 class="h1 text-success"><b>Objetivo Específico </b>N°2</h1>
+                              <ul style="list-style: none; padding-left: 0;">
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                  <span style="width: 20px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                  <h3 class="h2">Investigar tecnologías de proyección en 3D y sistemas de regulación de distancia</h3>
+                                </li>
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                  <span style="width: 20px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                  <h3 class="h2">Analizar necesidades específicas de proyección para lecciones de tiro</h3>
+                                </li>
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                  <span style="width: 20px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                  <h3 class="h2">Identificar requisitos de hardware y software para el sistema de proyección.</h3>
+                                </li>
+                              </ul>
                             </div>
                         </div>
                     </div>
@@ -228,7 +237,7 @@
                         <div class="col-12">
                             <p class="text-left text-light">
                                 Copyright &copy; 2024 SIET-4D 
-                                | Diseñado por <a rel="sponsored" href="#" target="_blank">Cidar & Ruddy</a>
+                                | Diseñado por <a rel="sponsored" href="https://academic-record-git-main-cidars-projects.vercel.app/" target="_blank">Cidar & Ruddy</a>
                             </p>
                         </div>
                     </div>
