--- a/ftAux.html
+++ b/ftAux.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="assets/img/apple-icon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/templatemo.css">
@@ -104,11 +104,11 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_01.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/DIRECTIVAS.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
-                                <h1 class="h1 text-success"><b>Objetivo Espesifico </b>N°1 </h1>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°1 </h1>
                                 <ul style="list-style: none; padding-left: 0;">
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                       <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
@@ -128,16 +128,12 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/WEB 2.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°2</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°2 </h1>
+                                <h3><a class="h2 text-success" rel="sponsored" href="https://www.ibm.com/mx-es/topics/computer-vision" target="_blank">https://www.ibm.com/mx-es/topics/computer-vision</a></h3>
                             </div>
                         </div>
                     </div>
@@ -222,7 +218,7 @@
                         <div class="col-12">
                             <p class="text-left text-light">
                                 Copyright &copy; 2024 SIET-4D 
-                                | Diseñado por <a rel="sponsored" href="#" target="_blank">Cidar & Ruddy</a>
+                                | Diseñado por <a rel="sponsored" href="https://academic-record-git-main-cidars-projects.vercel.app/" target="_blank">Cidar & Ruddy</a>
                             </p>
                         </div>
                     </div>
