--- a/ftBase.html
+++ b/ftBase.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="assets/img/apple-icon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/templatemo.css">
@@ -104,7 +104,7 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_01.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/REGLAMENTO MILITAR.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
@@ -128,16 +128,29 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/FT OBJ 2.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°2</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                            <div class="text-align-left align-self-center">
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°2 </h1>
+                                <ul style="list-style: none; padding-left: 0;">
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 17px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3 class="h2">Szeliski, R. (2010). Vision por computadora: Algoritmos y Aplicaciones</h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 12px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3 class="h2">Patel, N. V. (2018). Use of haptic feedback in surgery</h3>
+                                    </li>  
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                      <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                      <h3 class="h2">Reglamentos de tiro 20-A</h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                      <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                      <h3 class="h2">Reglamentos de tiro 20-B</h3>
+                                    </li>
+                                  </ul>
                             </div>
                         </div>
                     </div>
@@ -222,7 +235,7 @@
                         <div class="col-12">
                             <p class="text-left text-light">
                                 Copyright &copy; 2024 SIET-4D 
-                                | Diseñado por <a rel="sponsored" href="#" target="_blank">Cidar & Ruddy</a>
+                                | Diseñado por <a rel="sponsored" href="https://academic-record-git-main-cidars-projects.vercel.app/" target="_blank">Cidar & Ruddy</a>
                             </p>
                         </div>
                     </div>
