--- a/ftAux.html
+++ b/ftAux.html
@@ -143,18 +143,48 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/WEB 3.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°3</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                            <div class="text-align-left align-self-center">
+                                <h1 class="h1 text-success"><b>Objetivo Específico</b> N°3</h1>
+                                <ul style="list-style: none; padding-left: 0;">
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://www.arsys.es/blog/vision-artificial" target="_blank">https://www.arsys.es/blog/vision-artificial</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://www.tableau.com/es-mx/data-insights/ai/what-is" target="_blank">https://www.tableau.com/es-mx/data-insights/ai/what-is</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 20px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://azure.microsoft.com/es-es/resources/cloud-computing-dictionary/what-is-artificial-intelligence#autom%C3%B3viles-sin-conductor" target="_blank">https://azure.microsoft.com/es-es/resources/cloud-computing-dictionary/what-is-artificial-intelligence#autom%C3%B3viles-sin-conductor</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://aima.cs.berkeley.edu/" target="_blank">https://aima.cs.berkeley.edu/</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 15px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://www2.deloitte.com/es/es/pages/technology/articles/IoT-internet-of-things.html" target="_blank">https://www2.deloitte.com/es/es/pages/technology/articles/IoT-internet-of-things.html</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 12px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://www.esic.edu/rethink/tecnologia/internet-las-cosas-aplicaciones" target="_blank">https://www.esic.edu/rethink/tecnologia/internet-las-cosas-aplicaciones</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://www.redhat.com/es/topics/internet-of-things/what-is-iot" target="_blank">https://www.redhat.com/es/topics/internet-of-things/what-is-iot</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://www.ibm.com/mx-es/topics/computer-vision" target="_blank">https://www.ibm.com/mx-es/topics/computer-vision</a></h3>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
@@ -162,18 +192,36 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/WEB 4.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°4</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                            <div class="text-align-left align-self-center">
+                                <h1 class="h1 text-success"><b>Objetivo Específico</b> N°4</h1>
+                                <ul style="list-style: none; padding-left: 0;">
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://www.arsys.es/blog/vision-artificial" target="_blank">https://www.arsys.es/blog/vision-artificial</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 12px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://www.tableau.com/es-mx/data-insights/ai/what-is" target="_blank">https://www.tableau.com/es-mx/data-insights/ai/what-is</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 30px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://azure.microsoft.com/es-es/resources/cloud-computing-dictionary/what-is-artificial-intelligence#autom%C3%B3viles-sin-conductor" target="_blank">https://azure.microsoft.com/es-es/resources/cloud-computing-dictionary/what-is-artificial-intelligence#autom%C3%B3viles-sin-conductor</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://aima.cs.berkeley.edu/" target="_blank">https://aima.cs.berkeley.edu/</a></h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 12px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3><a class="h2 text-success" rel="sponsored" href="https://www.ibm.com/mx-es/topics/computer-vision" target="_blank">https://www.ibm.com/mx-es/topics/computer-vision</a></h3>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
@@ -181,7 +229,7 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/WEB 5.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
