--- a/normativa.html
+++ b/normativa.html
@@ -95,9 +95,9 @@
         <ol class="carousel-indicators">
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="0" class="active"></li>
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="1"></li>
-            <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
+            <!-- <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="3"></li>
-            <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="4"></li>
+            <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="4"></li> -->
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -123,7 +123,7 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°2 </h1>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°2 - 5 </h1>
                                 <h3 class="h2">Sin referencia o apelación a ninguna normativa legal en actual vigencia.
                                 </h3>
                             </div>
@@ -131,20 +131,17 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/SIN LEYES.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°3</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°3 </h1>
+                                <h3 class="h2">Sin referencia o apelación a ninguna normativa legal en actual vigencia.
+                                </h3>
                             </div>
                         </div>
                     </div>
@@ -187,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <a class="carousel-control-prev text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="prev">
             <i class="fas fa-chevron-left"></i>
