--- a/acciones.html
+++ b/acciones.html
@@ -162,16 +162,29 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/ACCION OBJ 3.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°3</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                            <div class="text-align-left align-self-center">
+                              <h1 class="h1 text-success"><b>Objetivo Específico </b>N°3</h1>
+                              <ul style="list-style: none; padding-left: 0;">
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                  <span style="width: 13px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                  <h3 class="h2">Investigar tecnologías de láser y visión artificial</h3>
+                                </li>
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                  <span style="width: 13px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                  <h3 class="h2">Definir requisitos específicos del sistema de puntería</h3>
+                                </li>
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                  <span style="width: 20px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                  <h3 class="h2">Diseñar e implementar el sistema de detección y procesamiento de imágenes</h3>
+                                </li>
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                    <span style="width: 17px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                    <h3 class="h2"> Integrar el sistema en el polígono de tiro para pruebas y ajustes</h3>
+                                  </li>
+                              </ul>
                             </div>
                         </div>
                     </div>
@@ -181,16 +194,33 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/ACCION OBJ 4.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°4</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                            <div class="text-align-left align-self-center">
+                              <h1 class="h1 text-success"><b>Objetivo Específico </b>N°4</h1>
+                              <ul style="list-style: none; padding-left: 0;">
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                  <span style="width: 17px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                  <h3 class="h2">Investigar tecnologías de reconocimiento de posiciones del cuerpo humano</h3>
+                                </li>
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                  <span style="width: 15px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                  <h3 class="h2">Definir los requisitos específicos del sistema de reconocimiento</h3>
+                                </li>
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                  <span style="width: 15px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                  <h3 class="h2">Diseñar e implementar el sistema de reconocimiento de posiciones</h3>
+                                </li>
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                    <span style="width: 12px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                    <h3 class="h2">Integrar el sistema con el entorno de la lección de tiro</h3>
+                                </li>
+                                <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                    <span style="width: 17px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                    <h3 class="h2">Realizar pruebas y ajustes para garantizar la detección precisa de posturas</h3>
+                                </li>
+                              </ul>
                             </div>
                         </div>
                     </div>
