--- a/ftBase.html
+++ b/ftBase.html
@@ -108,7 +108,7 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
-                                <h1 class="h1 text-success"><b>Objetivo Espesifico </b>N°1 </h1>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°1 </h1>
                                 <ul style="list-style: none; padding-left: 0;">
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                       <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
@@ -160,16 +160,37 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/FT OBJ 3.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°3</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                            <div class="text-align-left align-self-center">
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°3 </h1>
+                                <ul style="list-style: none; padding-left: 0;">
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 17px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3 class="h2">Barrett, M. (2006). Sniper training and employment. Headquarters. Department of the Army</h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 17px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3 class="h2">Szeliski, R. (2010). Vision por computadora: Algoritmos y Aplicaciones. Springer
+                                        </h3>
+                                    </li>  
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                      <span style="width: 35px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                      <h3 class="h2">Cugliari, G., & Michelini, R. C. (2019). Biomecánica y lesiones en el tiro deportivo:Revisión de la literatura. Revista Médica del Hospital General de México.
+                                    </h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 15px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3 class="h2">Atzori, L., Lera, A., & Morabito, G. (2010). The Internet of Things
+                                        </h3>
+                                    </li> 
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 13px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3 class="h2">Vermesan, O., & Friess, P. (2014). Internet of Things
+                                        </h3>
+                                    </li> 
+                                  </ul>
                             </div>
                         </div>
                     </div>
@@ -179,16 +200,22 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/FT OBJ4.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°4</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                            <div class="text-align-left align-self-center">
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°4 </h1>
+                                <ul style="list-style: none; padding-left: 0;">
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 17px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3 class="h2">Szeliski, R. (2010). Vision por computadora: Algoritmos y Aplicaciones</h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                      <span style="width: 35px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                      <h3 class="h2">Cugliari, G., & Michelini, R. C. (2019). Biomecánica y lesiones en el tiro deportivo:Revisión de la literatura. Revista Médica del Hospital General de México.
+                                    </h3>
+                                    </li>
+                                  </ul>
                             </div>
                         </div>
                     </div>
